fix: update object-position for images to improve alignment

--- a/src/styles/layout/album.css
+++ b/src/styles/layout/album.css
@@ -24,7 +24,7 @@
 		}
 		& img {
 			object-fit: cover;
-			object-position: bottom;
+			object-position: center 25%;
 			transition: all 0.5s ease;
 			filter: var(--img-hover);
 
