--- a/src/styles/layout/header.css
+++ b/src/styles/layout/header.css
@@ -88,7 +88,7 @@
 			block-size: 100%;
 			inline-size: 100%;
 			object-fit: cover;
-			object-position: bottom;
+			object-position: center 40%;
 		}
 	}
 }
